--- a/gb/21/2/26/n12777275.md
+++ b/gb/21/2/26/n12777275.md
@@ -1,71 +1,73 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tcgkzq3248/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tcgkzq3248/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tcgkzq3248/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>北港工艺坊生肖联展 42位工艺师齐展身手</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/02/485561-600x400.jpg" />
 <h6>今年是牛年，北港工艺坊特别邀请全国42位工艺师以“牛”为主题，利用各种媒材创作出多元丰富的作品，参展的工艺师手持作品于北港工艺坊大合照。（廖素贞／大纪元）
 </h6>
 <hr>
-<p>【大纪元2021年02月26日讯】（大纪元记者廖素贞台湾云林报导）今年是牛年，<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E5%8C%97%E6%B8%AF%E5%B7%A5%E8%89%BA%E5%9D%8A.md#1">北港工艺坊</a>特别邀请全国42位工艺师以“牛”为主题，利用各种媒材创作出多元丰富的作品，让来到北港的游客除了观赏花灯外，也能感受<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E5%B7%A5%E8%89%BA.md#1">传统工艺</a>之美。展出作品除了传统的木雕、石雕、剪黏、陶瓷、捏面人外、也有拼布、纸雕、缠花、糊纸、烙画、琉璃、彩绘等工艺创作品，展期即日起至到4/4日止，精彩连连的作品，是来北港看“巷弄花灯”不可错过的地方！</p>
+<p>【大纪元2021年02月26日讯】（大纪元记者廖素贞台湾云林报导）今年是牛年，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8C%97%E6%B8%AF%E5%B7%A5%E8%89%BA%E5%9D%8A.md#1">北港工艺坊</a>特别邀请全国42位工艺师以“牛”为主题，利用各种媒材创作出多元丰富的作品，让来到北港的游客除了观赏花灯外，也能感受<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E5%B7%A5%E8%89%BA.md#1">传统工艺</a>之美。展出作品除了传统的木雕、石雕、剪黏、陶瓷、捏面人外、也有拼布、纸雕、缠花、糊纸、烙画、琉璃、彩绘等工艺创作品，展期即日起至到4/4日止，精彩连连的作品，是来北港看“巷弄花灯”不可错过的地方！</p>
 <p>令人惊艳的缠花作品“水牛白鹭”，作者曾国棻细致的工法把“牛、白鹭鸶、柳树”三者之间宁静祥和的画面展露无遗，看了让人很疗愈，这是早期农村的景象，现代人已看不到这样的画面了！</p>
-<figure id="attachment_12777278" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2021/02/485562.jpg"><img class="size-large wp-image-12777278" src="https://i.epochtimes.com/assets/uploads/2021/02/485562-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">令人惊艳的缠花作品“水牛白鹭”，作者曾国棻细致的工法，把“牛、白鹭鸶、柳树”三者之间宁静祥和的画面展露无遗。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_12777278" aria-describedby="caption-attachment-12777278" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/02/485562.jpg"><img class="size-large wp-image-12777278" src="https://i.epochtimes.com/assets/uploads/2021/02/485562-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12777278" class="wp-caption-text">令人惊艳的缠花作品“水牛白鹭”，作者曾国棻细致的工法，把“牛、白鹭鸶、柳树”三者之间宁静祥和的画面展露无遗。（廖素贞／大纪元）</figcaption></figure>
 <p>作品“回家”是从事神像雕刻40年的林朝金的精心之作，温文儒雅的他，雕刻出来的作品，总是那么细致完美，他以樟木雕出一头温驯的牛和狗之间的情谊，在一旁的林太太说：牛和狗是人类最忠实的朋友，作品中的牛和狗是好朋友，有一天它们出来游玩，狗对着牛说：天黑了！我们回家吧！</p>
-<figure id="attachment_12777279" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2021/02/485563.jpg"><img class="size-large wp-image-12777279" src="https://i.epochtimes.com/assets/uploads/2021/02/485563-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">林朝金和夫人蔡美珠一起展示参展作品“回家”。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_12777279" aria-describedby="caption-attachment-12777279" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/02/485563.jpg"><img class="size-large wp-image-12777279" src="https://i.epochtimes.com/assets/uploads/2021/02/485563-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12777279" class="wp-caption-text">林朝金和夫人蔡美珠一起展示参展作品“回家”。（廖素贞／大纪元）</figcaption></figure>
 <p>捏面人陈美丽的“牛转钱坤”，她用面粉和颜料，捏出一头壮硕的黄牛，身上披挂着成串的古钱币，后面还拉着一大篮的金元宝，还翘着牛尾巴、昂着首的有趣作品，令人莞尔，作者希望大家牛年发大财！</p>
-<figure id="attachment_12777281" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2021/02/485564.jpg"><img class="size-large wp-image-12777281" src="https://i.epochtimes.com/assets/uploads/2021/02/485564-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">捏面人陈美丽的“牛转钱坤”有趣的作品令人莞尔，作者希望大家牛年都能发大财！（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_12777281" aria-describedby="caption-attachment-12777281" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/02/485564.jpg"><img class="size-large wp-image-12777281" src="https://i.epochtimes.com/assets/uploads/2021/02/485564-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12777281" class="wp-caption-text">捏面人陈美丽的“牛转钱坤”有趣的作品令人莞尔，作者希望大家牛年都能发大财！（廖素贞／大纪元）</figcaption></figure>
 <p>看起来“很牛”的油画作品，是妈祖神像画家曾良美的作品，她说：客户要求要画得很“牛”，为了这幅画她煞费了苦心，最后总算把客户要的感觉画出来！</p>
-<figure id="attachment_12777291" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2021/02/485568-1.jpg"><img class="size-large wp-image-12777291" src="https://i.epochtimes.com/assets/uploads/2021/02/485568-1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">妈祖画家曾梁美的作品“金牛贺新春”（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_12777291" aria-describedby="caption-attachment-12777291" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/02/485568-1.jpg"><img class="size-large wp-image-12777291" src="https://i.epochtimes.com/assets/uploads/2021/02/485568-1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12777291" class="wp-caption-text">妈祖画家曾梁美的作品“金牛贺新春”（廖素贞／大纪元）</figcaption></figure>
 <p>用牛樟木把水牛身上毛的纹路，雕刻的栩栩如生，上面还坐着一个摇着铃鼓的牧童，充满喜气又纯朴的作品很吸精，作者苏荣凌表示，他花了二个星期才完成这个作品，那个牧童不是黏上去，是一体成形的！</p>
-<figure id="attachment_12777282" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2021/02/485565.jpg"><img class="size-large wp-image-12777282" src="https://i.epochtimes.com/assets/uploads/2021/02/485565-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">苏荣凌的作品“牛转乾坤”以樟木为媒材，一体成形把牛身身上的纹路和牧童雕刻的栩栩如生。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_12777282" aria-describedby="caption-attachment-12777282" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/02/485565.jpg"><img class="size-large wp-image-12777282" src="https://i.epochtimes.com/assets/uploads/2021/02/485565-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12777282" class="wp-caption-text">苏荣凌的作品“牛转乾坤”以樟木为媒材，一体成形把牛身身上的纹路和牧童雕刻的栩栩如生。（廖素贞／大纪元）</figcaption></figure>
 <p>用拼布呈现牛爸爸和牛妈妈坐拥着五只小牛的幸福家庭作品，作者周秀惠说，希望牛年大家阖家平安幸福！还有剪黏大师许哲彦的作品“老子过函谷关，紫气东来”更是唯妙唯肖，希望武汉肺炎能早日烟消云散！</p>
-<figure id="attachment_12777283" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2021/02/485566.jpg"><img class="size-large wp-image-12777283" src="https://i.epochtimes.com/assets/uploads/2021/02/485566-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">周秀惠的拼布作品“金牛祈福 阖家幸福”，祈求牛年大家能阖家平安幸福。（廖素贞／大纪元）</figcaption></figure>
-<figure id="attachment_12777284" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2021/02/485567.jpg"><img class="size-large wp-image-12777284" src="https://i.epochtimes.com/assets/uploads/2021/02/485567-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">剪黏大师许哲彦的作品老子过函谷关“紫气东来 牛转乾坤”。（廖素贞／大纪元）</figcaption></figure>
-<figure id="attachment_12777292" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2021/02/485569-1.jpg"><img class="size-large wp-image-12777292" src="https://i.epochtimes.com/assets/uploads/2021/02/485569-1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">这次展出的作品还有十字绣、纸雕、陶艺、石雕等多元作品。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_12777283" aria-describedby="caption-attachment-12777283" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/02/485566.jpg"><img class="size-large wp-image-12777283" src="https://i.epochtimes.com/assets/uploads/2021/02/485566-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12777283" class="wp-caption-text">周秀惠的拼布作品“金牛祈福 阖家幸福”，祈求牛年大家能阖家平安幸福。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_12777284" aria-describedby="caption-attachment-12777284" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/02/485567.jpg"><img class="size-large wp-image-12777284" src="https://i.epochtimes.com/assets/uploads/2021/02/485567-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12777284" class="wp-caption-text">剪黏大师许哲彦的作品老子过函谷关“紫气东来 牛转乾坤”。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_12777292" aria-describedby="caption-attachment-12777292" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/02/485569-1.jpg"><img class="size-large wp-image-12777292" src="https://i.epochtimes.com/assets/uploads/2021/02/485569-1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12777292" class="wp-caption-text">这次展出的作品还有十字绣、纸雕、陶艺、石雕等多元作品。（廖素贞／大纪元）</figcaption></figure>
 <p>责任编辑：陈玟绮</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/26/n12776933.md#1">有关污水下水道嘉义市政府说明</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/26/n12776940.md#1">台湾科普环岛列车促成 科技部长抵兴嘉国小</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/26/n12777190.md#1">满州民谣绘本“朵朵的礼物”学童赞好看好听</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/26/n12777061.md#1">中国禁台湾凤梨  屏东县长：用新台币挺农民</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/26/n12776783.md#1">屏东县大武山文学奖、作家作品集征稿起跑</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/26/n12776817.md#1">五沟水庆元宵  六堆300年祈福尖炮城登场</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/26/n12777009.md#1">嘉义市国旅住宿人次2年来成长近4成</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/26/n12776549.md#1">二二八春游踏青 故宫南院办野餐音乐会</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/26/n12776045.md#1">北港花灯结合开台400周年  25日晚间启灯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680727.md#1">2022年嘉义区庆祝青年节 表扬36位优秀青年</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680578.md#1">2022年春祭 嘉市学生329青年节追思先贤烈士</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680487.md#1">办公室减废嘉eat点 享外送美食便利点</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679209.md#1">111年嘉义优秀青年代表  参访嘉义县政府</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679216.md#1">嘉楠集团捐赠台大云林分院景观花园暨中型巴士</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678761.md#1">结合紫斑蝶季 云林力推铁道观光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678686.md#1">观光、运动政见亮眼 潜水青年力挺庄瑞雄</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678682.md#1">双园断桥家属谢周春米 赞“正义女神”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678677.md#1">民进党屏县长初选 钟佳滨：不忘初心团结屏东</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678644.md#1">2022年度嘉市社工日活动起跑 纾压体验三选一</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10835295.md#1" target="_blank">中华传统文化之叹——消逝的城墙（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/8/n9937008.md#1" target="_blank">陈益南：怵目惊心！1951年的“镇反”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/22/n12767168.md#1">辛丑八卦2021年两岸国运</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/20/12/30/n12653772.md#1">【命理】相士算他活不过30岁 为何不应验？</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/21/n12765804.md#1">预言中的大瘟疫和中国变局</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/21/n12765309.md#1">女子濒死游天堂 被告知时辰未到并赶回人间</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/1/24/n12709238.md#1">无解的人体之谜 为何修行者的肉身不腐</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/15/12/20/n4600383.md#1">散文：读〈天台二女〉</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12775571.md#1">【直播预告】2021保守派大会首日 政要发言</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12774955.md#1">【新闻大家谈】两暗桩 美国会警长曝悲剧内幕</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770771.md#1">中国人寿贪腐严重 女员工举报遭报复</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770213.md#1">贾庆林家族腐败内幕再被摆上台面</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12772903.md#1">大陆“会计所一哥”濒临倒闭 人去楼空</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12774018.md#1">李翊君在家不慎滑倒 脸遭重击“整片发黑”</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12773132.md#1">孙俪获好友赠二手童装 小花真实反应感动网友</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770447.md#1">吴孟达遭谣传罹癌去世 友人田启文斥陆媒缺德</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12775727.md#1">陆综将赛琳娜换肾手术照P图 网友怒斥无底线</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12771557.md#1">“97”手镯有谦每天戴 车银优BTS柾国等人合送</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12772677.md#1">9种食物是“天然肠胃药” 改善胃食道逆流</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12768699.md#1">缺乏维生素D易感染新冠 1招补充最快</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770063.md#1">春天是轻松减肥和排毒的绝佳时机</a></li>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12774299.md#1">网红称重复做奇怪的梦 或解前世死因</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tcgkzq3248/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tcgkzq3248/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/26/n12777275.htm">北港工艺坊生肖联展 42位工艺师齐展身手</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/26/n12777275.htm">北港工艺坊生肖联展 42位工艺师齐展身手</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/26/n12777275.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tcgkzq3248/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tcgkzq3248/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/2/26/n12777275.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
